package component;

public interface Hoverable {
    void setHovering(boolean hover);
}
